--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,6 +351,7 @@ footer h5 {
     button:hover {
         background-color: #E3E3E3;
         color: #835937;
+        cursor: pointer;
     }
 
     button a:hover {
